# tg-mastodon

./: pyproject.toml
tg-mastodon/: __main__.py  config.py  extractor.py  extractor_test.ipynb
tg-mastodon/cli/: config.py  main.py  utils.py
